--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -1,1 +1,76 @@
-/* You can add global styles to this file, and also import other style files */
+body, html{
+    margin: 0;
+    padding: 0;
+    font-family: 'Helvetica', sans-serif;
+}
+
+/* Alignment Classes */
+
+.flex-row-start {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+.flex-row-evenly {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.flex-row-between {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.flex-col-start {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+.flex-col-evenly {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.flex-col-between {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+}
+
+/* Color Scheme Classes */
+
+.accent01{
+    background: #040303;
+    color: #BEB0A7;
+}
+
+.accent02{
+    background: #3A4E48;
+    color: #BEB0A7;
+}
+
+.accent03{
+    background: #6A7B76;
+    color: #040303;
+}
+
+.accent04{
+    background: #8B9D83;
+    color: #040303;
+}
+
+.accent05{
+    background: #BEB0A7;
+    color: #3A4E48;
+}
