--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,10 +1,10 @@
 <div class="app-container accent02">
 
-  <toolbar id="toolbar" class="accent01 flex-row-evenly"></toolbar>
+  <toolbar id="toolbar" class="accent01 flex-row-between"></toolbar>
 
-  <styler id="styler" class="accent03 flex-col-start"></styler>
+  <styler id="styler" class="accent05 flex-col-start"></styler>
 
-  <sandbox id="sandbox" class="accent04 flex-col-evenly"></sandbox>
+  <sandbox id="sandbox" class="accent05"></sandbox>
 
   <slide-editor id="slide-editor" class="accent05 flex-col-evenly"></slide-editor>
 
