--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -4,6 +4,11 @@ body, html{
     font-family: 'Helvetica', sans-serif;
 }
 
+h1, h2, h3, h4, h5, h6p {
+    margin: 0;
+    padding: 0;
+}
+
 /* Alignment Classes */
 
 .flex-row-start {
@@ -57,12 +62,12 @@ body, html{
 
 .accent02{
     background: #3A4E48;
-    color: #BEB0A7;
+    color: rgb(235, 216, 205);
 }
 
 .accent03{
     background: #6A7B76;
-    color: #040303;
+    color: #d8d8d8;
 }
 
 .accent04{
@@ -73,4 +78,22 @@ body, html{
 .accent05{
     background: #BEB0A7;
     color: #3A4E48;
+}
+
+/* Large toolbar buttons */
+
+.lg-btn {
+    font-size: 0.7rem;
+    text-align: center;
+    margin: 0;
+    height: 100%;
+    width: 100px;
+}
+
+.lg-btn:hover {
+    background: rgb(82, 82, 82);
+}
+
+.lg-btn p {
+    margin: 0 10px;
 }
