Slide render now resizes according to browser size and retains 16:9 ratio

--- a/client/src/app/sandbox/sandbox.component.css
+++ b/client/src/app/sandbox/sandbox.component.css
@@ -10,6 +10,8 @@ textarea {
     resize: none;
     outline: none;
     user-select: none;
+    padding: 0;
+    margin: 0;
 }
 
 #text-preview-container {
