--- a/client/src/app/sandbox/sandbox.component.html
+++ b/client/src/app/sandbox/sandbox.component.html
@@ -1,5 +1,5 @@
 <!-- Sandbox toolbar -->
-<div class="accent03 flex-row-evenly">
+<div class="grayAccent02 flex-row-evenly">
   <a (click)="this.data.test()" class="flex-row-evenly md-btn">
     <fa name="font" size="3x" class="accent03 object-icon"></fa>
     <p>Create a new text object</p>
@@ -17,7 +17,7 @@
 </div>
 
 <!-- Text sandbox -->
-<div id="text-sandbox">
+<div id="text-sandbox" class="grayAccent03">
   <div id="text-preview-container">
     <div class="dotted-border">
       <p id="text-preview">The quick brown fox jumps over the lazy dog.</p>
@@ -28,7 +28,7 @@
     <textarea>
       User text input here
     </textarea>
-    <a (click)="this.data.test()" class="lg-btn flex-col-evenly accent03">
+    <a (click)="this.data.test()" class="lg-btn flex-col-evenly grayAccent02">
       <fa name="share" size="3x"></fa>
       <p>Add text object to slide</p>
     </a>
