--- a/client/src/app/styler/styler.component.html
+++ b/client/src/app/styler/styler.component.html
@@ -1,5 +1,5 @@
 <!-- TEXT STYLE CARD -->
-<div class="style-card accent02 flex-col-evenly">
+<div class="style-card orangeAccent01 flex-col-start">
 
   <div class="flex-row-between style-card-row">
     <h3>StyleName
