--- a/client/src/app/toolbar/toolbar.component.html
+++ b/client/src/app/toolbar/toolbar.component.html
@@ -15,8 +15,8 @@
     </a>
 </div>
 
-<div id="style-selector" class="accent02">
-  <a (click)="this.data.test()" class="accent04 style-btn">Test</a>
+<div id="style-selector" class="orangeAccent02">
+  <a (click)="this.data.test()" class="orangeAccent01 style-btn">Test</a>
 </div>
 
 <div class="flex-row-evenly">
