--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,6 +1,6 @@
-<div class="app-container accent02">
+<div class="app-container grayAccent01">
 
-  <toolbar id="toolbar" class="accent01 flex-row-between"></toolbar>
+  <toolbar id="toolbar" class="grayAccent01 flex-row-between"></toolbar>
 
   <styler id="styler" class="accent05 flex-col-start"></styler>
 
