--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -4,7 +4,7 @@ body, html{
     font-family: 'Helvetica', sans-serif;
 }
 
-h1, h2, h3, h4, h5, h6p {
+h1, h2, h3, h4, h5, h6, p {
     margin: 0;
     padding: 0;
 }
@@ -86,6 +86,47 @@ h1, h2, h3, h4, h5, h6p {
     background: none;
     border: 3px silver dotted
 }
+
+/*-----*/
+
+.orangeAccent01{
+    background: #60695C;
+    color: #D6F9DD;
+}
+
+.orangeAccent02{
+    background: rgb(63, 78, 66);
+    color: rgb(255, 209, 82)
+}
+
+.blueAccent01{
+    background: rgb(56, 23, 243);
+    color: rgb(255, 255, 255);
+}
+
+.blueAccent02{
+    background: rgb(73, 85, 73);
+    color: rgb(204, 235, 204)
+}
+
+.grayAccent01{
+    background: rgb(34, 34, 34);
+    color: rgb(255, 255, 255)
+}
+
+.grayAccent02{
+    background: rgb(65, 65, 65);
+    color: rgb(231, 231, 231)
+}
+
+.grayAccent03{
+    background: rgb(221, 221, 221);
+    color: rgb(99, 99, 99)
+}
+
+
+
+
 
 /* Large toolbar buttons */
 
