--- a/client/src/app/slide-editor/slide-editor.component.html
+++ b/client/src/app/slide-editor/slide-editor.component.html
@@ -41,18 +41,18 @@
   <div id="slide-control-panel" class="grayAccent02">
     <div id="slide-settings" class="grayAccent02 flex-row-evenly">
       <a (click)="this.data.test()" class="sm-btn flex-row-evenly">
-        <fa name="palette" size="2x"></fa>
-        Set background color</a>
+        <fa name="palette" size="2x"></fa><p>
+        Set background color</p></a>
 
       <a (click)="this.data.test()" class="sm-btn flex-row-evenly">
-        <fa name="palette" size="2x"></fa>Set default background color</a>
+        <fa name="palette" size="2x"></fa><p>Set default background color</p></a>
 
       <a (click)="this.data.test()" class="sm-btn flex-row-evenly">
-        <fa name="image" size="2x"></fa>Set background image</a>
+        <fa name="image" size="2x"></fa><p>Set background image</p></a>
     </div>
 
 
-    <div class="slide-control-row flex-row-between">
+    <div class="slide-control-row flex-row-between wrap">
       <div class="flex-row-evenly">
         
         <a (click)="this.data.test()" class="sm-btn flex-row-evenly">
