--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -190,3 +190,12 @@ h1, h2, h3, h4, h5, h6, p {
     background: rgb(82, 82, 82);
 }
 
+/* Extra small buttons */
+.xs-btn{
+    font-size: 0.7rem;
+    text-align: center;
+    margin: 0 auto;
+    padding: 0;
+    height: auto;
+}
+
